# embedded-cereal-bowl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  release.yml
docs/: code-formatter.md  crlf-checker.md  installation.md
src/embedded_cereal_bowl/: __init__.py  archive_logs.py  check_crlf.py  cli.py
src/embedded_cereal_bowl/formatter/: formatter.py
src/embedded_cereal_bowl/monitor/: monitor.py
src/embedded_cereal_bowl/timestamp/: timestamp.py
src/embedded_cereal_bowl/utils/: color_utils.py
tests/: test_archive_logs.py  test_check_crlf.py  test_cli.py  test_formatter.py  test_init.py  test_monitor.py  test_timestamp.py
