[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-cereal-bowl"
dynamic = ["version"]
description = "A collection of lightweight Python utilities for embedded development"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lucas Hutch", email = "lucas@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Topic :: Terminals :: Serial",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.12"
dependencies = [
    "pyserial>=3.5",
    "regex>=2022.0.0",
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "ruff>=0.1.0",
    "build>=0.8.0",
]

[project.scripts]
monitor = "embedded_cereal_bowl.cli:main_monitor"
timestamp = "embedded_cereal_bowl.cli:main_timestamp"
check-crlf = "embedded_cereal_bowl.cli:main_check_crlf"
format-code = "embedded_cereal_bowl.cli:main_formatter"

[project.urls]
Homepage = "https://github.com/lucashutch/embedded-cereal-bowl"
Repository = "https://github.com/lucashutch/embedded-cereal-bowl"
Issues = "https://github.com/lucashutch/embedded-cereal-bowl/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # ruff-specific rules
    "RUF",
]

ignore = [
    "E501",  # Line too long (handled by formatter)
    "SIM103",  # Return condition directly (keep readable)
    "SIM105",  # Use contextlib.suppress (keep explicit try/except)
    "SIM108",  # Use ternary operator (keep readable)
    "B006",  # Mutable default argument (acceptable here)
    "SIM117",  # Combine with statements (keep readable)
    "RUF059",  # Unpacked variable not used (test convenience)
    "E402",  # Module level import (test setup)
    "F841",  # Local variable assigned but never used (test convenience)
    "E712",  # Avoid equality comparisons to True (keep explicit)
    "F821",  # Undefined name (existing code patterns)
    "F811",  # Redefinition (existing test patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=40",
]